--- a/Notebooks/Week02/Week02_NB3_Regularization.ipynb
+++ b/Notebooks/Week02/Week02_NB3_Regularization.ipynb
@@ -153,7 +153,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ridge_reg = Ridge(alpha=1, solver=\"cholesky\", random_state=42)\n",
+    "ridge_reg = Ridge(alpha=1, random_state=42)\n",
     "ridge_reg.fit(x, y)\n",
     "ridge_reg.intercept_, ridge_reg.coef_"
    ]
@@ -168,7 +168,7 @@
     "plt.plot(x,y,'ko')\n",
     "\n",
     "for i in [0,10,20]:\n",
-    "    ridge_reg = Ridge(alpha=i, solver=\"cholesky\", random_state=42)\n",
+    "    ridge_reg = Ridge(alpha=i, random_state=42)\n",
     "    ridge_reg.fit(x, y)\n",
     "    X_new = np.array([[0], [10]])\n",
     "    y_predict = ridge_reg.predict(X_new)\n",
@@ -187,7 +187,7 @@
     "plt.plot(x,y,'ko')\n",
     "\n",
     "for i in [0,100,1000]:\n",
-    "    ridge_reg = Ridge(alpha=i, solver=\"cholesky\", random_state=42)\n",
+    "    ridge_reg = Ridge(alpha=i, random_state=42)\n",
     "    ridge_reg.fit(x, y)\n",
     "    X_new = np.array([[0], [10]])\n",
     "    y_predict = ridge_reg.predict(X_new)\n",
@@ -287,7 +287,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
