--- a/Notebooks/Week02/Week02_NB4_Polynomial.ipynb
+++ b/Notebooks/Week02/Week02_NB4_Polynomial.ipynb
@@ -515,7 +515,7 @@
     "ipywidgets.interactive(train_higher_order,\n",
     "                       o=(1,25),\n",
     "                       model=[sklearn.linear_model.LinearRegression(),\n",
-    "                              Ridge(alpha=1, solver=\"cholesky\", random_state=42),\n",
+    "                              Ridge(alpha=1, random_state=42),\n",
     "                              Lasso(alpha=1, random_state=42),\n",
     "                              ElasticNet(alpha=1, l1_ratio=0.5, random_state=42)])"
    ]
@@ -537,7 +537,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
