--- a/Notebooks/Week05/Week05_NB3_TextProcessing.ipynb
+++ b/Notebooks/Week05/Week05_NB3_TextProcessing.ipynb
@@ -25,7 +25,7 @@
     "from nltk.tokenize import word_tokenize, sent_tokenize\n",
     "\n",
     "import nltk\n",
-    "nltk.download('punkt')"
+    "nltk.download('punkt_tab')"
    ]
   },
   {
